<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">爱安卓</string>
    <string name="bottom_home">HOME</string>
    <string name="bottom_question">QUESTION</string>
    <string name="bottom_wechat">WECHAT</string>
    <string name="bottom_system">SYSTEM</string>
    <string name="bottom_project">PROJECT</string>
    <string name="tool_bar_title">Title</string>
    <string name="menu_share">Share</string>
    <string name="menu_collection">Collection</string>
    <string name="menu_opera">Open Explorer</string>
    <string name="nav_score">My Score</string>
    <string name="nav_collection">My Collection</string>
    <string name="nav_share">My Share</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_night">Night Mode</string>
    <string name="nav_setting">System Setting</string>
    <string name="nav_header_grade">Grade：</string>
    <string name="nav_header_order">Order：</string>
    <string name="login">Login in</string>
    <string name="up">up</string>
    <string name="top">TOP</string>
    <string name="new_">NEW</string>
    <string name="release">release</string>
    <string name="author">Author</string>
    <string name="chapter">chapter</string>
    <string name="fen_ge_fu">/</string>
    <string name="loading">Loading</string>
    <string name="loading_over">No data...</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Searching for more article</string>
    <string name="hot_search">Hot Search</string>
    <string name="search_history">Search History</string>
    <string name="clear_all">Clear All</string>
    <string name="search_show">Hurry up search dry article!</string>
    <string name="no_data">No data!O(∩_∩)O</string>
    <string name="input_search">Please input search content！</string>
    <string name="welcome">WelCome！</string>
    <string name="login_after">Better after login！</string>
    <string name="login_copy">(This app is development for Zhangzh)</string>
    <string name="input_username">Please input username</string>
    <string name="input_password">Please input password</string>
    <string name="go_register">Go Register</string>
    <string name="go_login">Go Login</string>
    <string name="input_email">Please input email</string>
    <string name="input_password_again">Please input password again</string>
    <string name="register">Register</string>
    <string name="login_out">Login Out</string>
</resources>