<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/item_article_status_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:id="@+id/item_article_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/textview_border_red"
            android:gravity="center"
            android:text="@string/top"
            android:textColor="@color/border_red"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_article_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/item_article_top"
            android:background="@drawable/textview_border_red"
            android:gravity="center"
            android:text="@string/new_"
            android:textColor="@color/border_red"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_article_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/item_article_new"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="@string/release"
            android:textColor="@color/border_blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_article_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/item_article_release"
            android:gravity="center"
            android:text="@string/author"
            android:textColor="@color/icon_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_article_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end|center_vertical"
            android:gravity="center"
            android:text="@string/article_time"
            android:textColor="@color/icon_gray"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/item_article_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_article_super_chapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/super_chapter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/fen_ge_fu"
                android:textColor="@color/icon_gray" />

            <TextView
                android:id="@+id/item_article_chapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chapter" />
        </LinearLayout>

        <ImageView
            android:id="@+id/item_article_collect"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:src="@drawable/collect_selector" />
    </RelativeLayout>

</LinearLayout>